--- a/Step1_Project.Rmd
+++ b/Step1_Project.Rmd
@@ -15,6 +15,7 @@ library(knitr)
 library(corrplot)
 library(rrcov)
 library(factoextra)
+library(plotrix)
 
 
 # Dataset:
@@ -45,7 +46,11 @@ Participants of the study were adults with, or at risk of, significant bleeding 
 
 We have adjusted the original data set to remove some variables that were not relevant to our investigation. We have removed variables regarding the exact surgical procedures administered to patients, various IDs, and details on the patient outcome. We removed the health outcome columns because of complications regarding missing data, where the boolean structure of the columns relating to specific outcomes, like stroke or pulmonary embolism, left a large number of cases with missing values. Instead, we added a boolean variable for a general outcome of survival to assess the efficacy of the procedure, rather than looking at particular health outcomes in post-surgery for living patients. 
 
-We will be using variables regarding the sex, age, and injury of the patient as well as certain biometrics, like blood pressure, respiratory and heart rates, details on surgical blood transfusion, and a boolean variable on the survival of the patient. Our selection provides us with a balance of continuous and categorical variables, many of which are boolean, with minimal complications due to missing data.
+We will be using variables regarding the sex, age, and injury of the patient as well as certain biometrics, like blood pressure, respiratory and heart rates, details on surgical blood transfusion, and a boolean variable on the survival of the patient. Our selection provides us with a balance of continuous and categorical variables, many of which are boolean, with minimal complications due to missing data. In summary, the data set consist of $n = 9497$ observations, with 11 columns, which $p = 8$ are quantitative and 3 are qualitative.
+
+Moreover, the normal ranges of the biometric measurements are also added, in order to have a point of comparison with the observations present in the data sey and in this way determine if they are abnormal with respect to the normal metrics.
+
+\newpage
 
 ### Summary variables in the data set
 
@@ -59,13 +64,13 @@ The variables in this dataset are the following:
 
 4. injurytype:	(Categorical) Type of injury {Blunt, Penetrating, Blunt and Penetrating}
 
-5. sbp: (Numerical) Systolic Blood Pressure (mmHg)
+5. sbp: (Numerical) Systolic Blood Pressure (mmHg). Normal range for adults at rest: less 120 mmHg.
 
-6. rr: (Numerical) Respiratory Rate (rate per minute)
+6. rr: (Numerical) Respiratory Rate (breaths per minute). Normal range for adults at rest: 12 - 20 breaths per minute.
 
-7. cc: (Numerical) Central Capillary Refille Time (seconds)
+7. cc: (Numerical) Central Capillary Refille Time (seconds). Normal range for adults at rest. Less 3 seconds
 
-8. hr: (Numerical) Heart Rate (rate per minute)
+8. hr: (Numerical) Heart Rate (beats per minute). Normal range for adults at rest: 60 - 100 bpm.
 
 9. ndaysicu: (Numerical) Number of days in ICU (days)
 
@@ -97,6 +102,8 @@ A review of the structure of the dataset is the following:
 str(X[,-c(12:16)])
 ```
 
+\newpage
+
 A summary of the values in the data set are:
 
 ```{r echo=FALSE}
@@ -112,7 +119,11 @@ kable(t(table),
       align="c")
 ```
 
+\newpage
+
 ## Visual Analysis
+
+### Univariate Analysis
 
 First, we will review the distribution of the variables involve in the dataset
 
@@ -122,14 +133,10 @@ In the case of age, the figure \ref{fig:age} reflects how this variable appears 
 plothist(col_name = "age", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
 ```
 
-The figure \ref{fig:injurytime} show the distribution of the variable Injury time. We can see how this variable is highly positive skewed with almost all values falling below ten minutes since the injury was experienced. This is likely due to the fact that in cases of serious injury victims are brought to the hospital quite quickly. Then, we apply a *log* transformation `log_injurytime = log(injurytime + 1)` to this variables as we can see in figure \ref{fig:loginjurytime}.
+The figure \ref{fig:injurytime} show the distribution of the variable Injury time. We can see how this variable is highly positive skewed with almost all values falling below ten minutes since the injury was experienced. This is likely due to the fact that in cases of serious injury victims are brought to the hospital quite quickly. Then, we apply a *log* transformation `log_injurytime = log(injurytime + 1)` to this variables as we can see in the below of figure \ref{fig:injurytime}.
 
-```{r injurytime, fig.cap = "Distribution of injurytime variable\\label{fig:injurytime}", echo=FALSE}
-plothist(col_name = "injurytime", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
-```
-
-```{r loginjurytime, fig.cap = "Distribution of the log injurytime variable\\label{fig:loginjurytime}", echo=FALSE}
-plothist(col_name = "log_injurytime", df = X,ylabtext = "All participants", color_1, breaks = 10, density_plot = FALSE)
+```{r injurytime, fig.cap = "Distribution of injurytime variable and log of injurytime\\label{fig:injurytime}", echo=FALSE}
+plothistlog(col_name = "injurytime", colname_log = "log_injurytime" ,df = X, breaks_colname_log = 10, ylabtext = "All participants", color_1)
 ```
 
 For *sbp* (Systolic Blood Pressure), the distribution is a fairly centrally balanced distribution around 90 mmHg. This is logical as a sample of biological characteristics observed in a population is likely to have most people around the mean and then a reasonably tight distribution of those who differ, similar to that of other biological features like height. Furthermore, most people are fairly young in the sample and therefore would have rates that deviant less from the norm, at a healthy level. The distribution is given by figure \ref{fig:sbp}.
@@ -138,14 +145,10 @@ For *sbp* (Systolic Blood Pressure), the distribution is a fairly centrally bala
 plothist(col_name = "sbp", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
 ```
 
-In the case of *rr* (Respiratory Rate) appears, similar to sbp, resembling a moderately balanced distribution around 22 respirations per minute, although is weighted more to the right. The distribution of this variable is showed in figure \ref{fig:rr}. Taking a *log* transformation `log_rr = log(rr)`, we have the new distribution in figure \ref{fig:logrr}.
+In the case of *rr* (Respiratory Rate) appears, similar to sbp, resembling a moderately balanced distribution around 22 respirations per minute, although is weighted more to the right. The distribution of this variable is showed in figure \ref{fig:rr}. Taking a *log* transformation `log_rr = log(rr)`, we have the new distribution in below part of figure \ref{fig:rr}.
 
-```{r rr, fig.cap = "Distribution of rr (Respiratory Rate)\\label{fig:rr}", echo=FALSE}
-plothist(col_name = "rr", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
-```
-
-```{r logrr, fig.cap = "Distribution of log transformation of rr (Respiratory Rate)\\label{fig:logrr}", echo=FALSE}
-plothist(col_name = "log_rr", df = X,ylabtext = "All participants", color_1, breaks = 8 ,density_plot = FALSE)
+```{r rr, fig.cap = "Distribution of rr (Respiratory Rate) and logrr\\label{fig:rr}", echo=FALSE}
+plothistlog(col_name = "rr", colname_log = "log_rr" ,df = X, breaks_colname_log = 8, ylabtext = "All participants", color_1)
 ```
 
 In the case of *hr* (Heart rate), figure \ref{fig:hr} show that this distribution seems fairly balanced at around 110, similar to the variables above, like *sbp* and *rr*.
@@ -154,34 +157,23 @@ In the case of *hr* (Heart rate), figure \ref{fig:hr} show that this distributio
 plothist(col_name = "hr", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
 ```
 
-For *cc* (Central capillary) refill has 75% of the observations below of 4 as we can appreciate in figure \ref{fig:cc}. However, the distribution is right-skewed. As a result, we apply a *log* transformation `log_cc = log(cc)` that is given in figure \ref{fig:logcc}.
+For *cc* (Central capillary) refill has 75% of the observations below of 4 as we can appreciate in figure \ref{fig:cc}. However, the distribution is right-skewed. As a result, we apply a *log* transformation `log_cc = log(cc)` that is given in the below part figure \ref{fig:cc}.
 
-```{r cc, fig.cap = "Distribution of cc (Central capillary)\\label{fig:cc}", echo=FALSE}
-plothist(col_name = "cc", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
+```{r cc, fig.cap = "Distribution of cc (Central capillary) and log transformation\\label{fig:cc}", echo=FALSE}
+plothistlog(col_name = "cc", colname_log = "log_cc" ,df = X, breaks_colname_log = 8, ylabtext = "All participants", color_1)
 ```
 
-```{r logcc, fig.cap = "Distribution of log transformation of cc (Central capillary)\\label{fig:logcc}", echo=FALSE}
-plothist(col_name = "log_cc", df = X,ylabtext = "All participants", color_1, breaks = 8 ,density_plot = FALSE)
+The figure \ref{fig:ndaysicu} shows the distribution of the *ndaysicu:* variable. In this case, the distribution is heavily weighted to the left and right-skewed. Most patients it seems, with injuries at high risk of bleeding, do not often need to remain in the hospital for long. The transformed distribution `log_ndaysicu = log(ndaysicu + 1)` is given in the below part of figure \ref{fig:ndaysicu}.
+
+```{r ndaysicu, fig.cap = "Distribution of ndaysicu and log transformation\\label{fig:ndaysicu}", echo=FALSE}
+plothistlog(col_name = "ndaysicu", colname_log = "log_ndaysicu" ,df = X, breaks_colname_log = 10, ylabtext = "All participants", color_1)
+
 ```
 
-The figure \ref{fig:ndaysicu} shows the distribution of the *ndaysicu:* variable. In this case, the distribution is heavily weighted to the left and right-skewed. Most patients it seems, with injuries at high risk of bleeding, do not often need to remain in the hospital for long. The transformed distribution `log_ndaysicu = log(ndaysicu + 1)` is given in the figure \ref{fig:logndaysicu}.
-
-```{r ndaysicu, fig.cap = "Distribution of ndaysicu\\label{fig:ndaysicu}", echo=FALSE}
-plothist(col_name = "ndaysicu", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
-```
-
-```{r logndaysicu, fig.cap = "Distribution of log ndaysicu\\label{fig:logndaysicu}", echo=FALSE}
-plothist(col_name = "log_ndaysicu", df = X,ylabtext = "All participants", color_1, breaks = 10, density_plot = FALSE)
-```
-
-Finally, for the *ncell*distribution is weighted to the left with a median of 3 as we can appreciate in the figure \ref{fig:ncell}. The conclusion of this it that with many patients, only needing a small number of or zero units of red cell products transfused. Due to this variable is highly right skewed, we apply the *log* transformation  `log_ncell = log(ncell + 1)` of the figure \ref{fig:logncell}.
+Finally, for the *ncell* distribution is weighted to the left with a median of 3 as we can appreciate in the figure \ref{fig:ncell}. The conclusion of this it that with many patients, only needing a small number of or zero units of red cell products transfused. Due to this variable is highly right skewed, we apply the *log* transformation  `log_ncell = log(ncell + 1)` of the figure \ref{fig:ncell} in their below part of the figure.
 
 ```{r ncell, fig.cap = "Distribution of ncell\\label{fig:ncell}", echo=FALSE}
-plothist(col_name = "ncell", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
-```
-
-```{r logncell, fig.cap = "Distribution of log ncell\\label{fig:logncell}", echo=FALSE}
-plothist(col_name = "log_ncell", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
+plothistlog(col_name = "ncell", colname_log = "log_ncell" ,df = X, breaks_colname_log = 8, ylabtext = "All participants", color_1)
 ```
 
 For the categorical variables, we will focus on the distributions of deaths. The figure \ref{fig:deaths}, shows that approximately for each death, 4 people survive. In the context of this problem, if we have an unbalanced proportion of people that survive can be considered as a sign that the drugs works.
@@ -193,6 +185,8 @@ ggplot(X) +
 ```
 
 \newpage
+
+### Univariate Analysis by death - survival patients
 
 On the other hand, we can study some relations of the quantitative variables in terms of the categorical variable death. Figure \ref{fig:agedeath} ...
 
@@ -495,14 +489,44 @@ figure \ref{fig:corrout} Lorem ipsum dolor sit amet, consectetur adipiscing elit
 
 ## Principal Component Analysis
 
+We can divide our quantitative variables in three categories:
+
+1. Individual factors
+
+  i) Age
+  ii) injurytime
+
+2. Biometrics
+
+  i) sbp
+  ii) rr
+  iii) cc
+  iv) hr
+
+3. Medical attention
+
+  i) ndaysicu
+  ii) ncell
+
+
+Then, we will discriminate how the principal components uses this variables.
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
 ## PCA Complete dataset
 
+In figure 25, we plot the first 2 PC. In this case, there is approximately 40% of the variance explained with these two principal components
+
+In green color, there is the survival patients and orange is the death patients. Is is difficult to see a clear sepatations between both populutions. In the same, there is no linear relationship between these two  groups.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+
 ![First two PCs based on the sample covariance all population](figure_output/pca_death.png)
 
+On the other hand, we will analize the weights of the fist two principal components. This can be seen in the figure \ref{fig:l1pc}. For the case of the first PC (Left), the largest positive value are associated with the specfic variable of *sbp*. Some studies, for example [Banegas et all](https://pubmed.ncbi.nlm.nih.gov/11896505/) and [Kurl et all](https://www.ahajournals.org/doi/full/10.1161/hs0901.095395) suggest that Systolic blood pressure is a more frequent cardiovascular risk factor than other blood related measures and can be used in order to detect future diseases. So, it appears that this principal components reflects these effect for the patients.
 
-figure \ref{fig:l1pc}...
+In the case of the second Principal component (Right) the largest positive value with the medical attention and injury time. It suggets that previous you receive medical attention, it is possible that you can have more chance for survival.
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
@@ -524,12 +548,15 @@ plot(1:p,X_pcs$rotation[,2],pch=19,col=color_1,main="Weights for the second PC",
      xlab="Variables",ylab="Score",xlim = c(1, 9), ylim = c(-1, 1))
 abline(h=0)
 text(1:p,X_pcs$rotation[,2],labels=colnames(X),pos=1,col=color_4,cex=0.75)
-
 ```
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+On the other hand, when we consider the loadings for the first two PCs (figure \ref{fig:l3pc}) that larges value in magnitude are associated with the sbp pressure and medical attention.
 
-figure \ref{fig:l3pc}...
+It is important to notice the inverse relation between sbp and other biometric measures. For example
+
+* [Herakova et all](https://clinicalhypertension.biomedcentral.com/articles/10.1186/s40885-017-0071-3) report that  in general deep breathing could reduce blood pressures (BP). So we 
+
+* [Harvard Heart Letter](https://www.health.harvard.edu/heart-health/does-heart-rate-affect-blood-pressure)  reports that an *isolated increase in blood pressure can drop the heart rate a little*
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
@@ -545,14 +572,19 @@ plot(X_pcs$rotation[,1:2],
      )
 abline(h=0,v=0)
 text(X_pcs$rotation[,1:2],labels=colnames(X),pos=1,col=color_4,cex=0.75)
-library(plotrix)
 draw.circle(0,0,1,border=color_4,lwd=1)
 ```
 
 
+Finally figure 28 reflects the PC scores and PC loadings. In this case, it is difficult to make conclusions due to the numbers of observed individuals, but we can make the following assevarations:
+
+* There is a strong positive relation between age and injury time.
+
+* There is no relation between the ndaysicu with the biometrical measures as sbp and hr. It makes sense, because this is a variable more related with the medical attention, as can be appreciated with the variables *ncell* and *injurytime*
+
 ![PC Scores and PC loading all population](figure_output/pca_biplot.png)
 
-figure \ref{fig:pcaeigv}...
+The figure \ref{fig:pcaeigv} shows the explained variance of the eigenvalue. We see that the first 4 principal components explains approximately 63% of the model.
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
@@ -562,17 +594,21 @@ fviz_eig(X_pcs,ncp=17,addlabels=T,barfill=color_1,barcolor=`color_4`)
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
+Figure 30 reflects the relations in the first four principal componets. We do not appreciate a clear distintion bewteen the groups, and the ausence of linear relation between them.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
 ![PC Scores and PC loading all population](figure_output/pca_4pc2.png)
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
-figure \ref{fig:corrpc}...
+Finally figure \ref{fig:corrpc} explain the correlation between the variables and the principal components. IN the case of tghe first principal components, in magnitude the biometrical measures and medical attention variables are the more related with them.  In the case of the second principal component, the individual factors such age and injury time adquire more relevance in the analisis.
 
-```{r corrpc, fig.cap = "Correlation between dataset and all PC and the first 4 PCs\\label{fig:corrpc}", echo=FALSE}
-par(mfrow=c(1,2))
+In case of age this i more influential in PC4, and it can explain the right orange points in figure 35.
+
+```{r corrpc, fig.cap = "Correlation between dataset and all PC\\label{fig:corrpc}", echo=FALSE}
 corrplot(cor(X,X_pcs$x),is.corr=T)
-corrplot(cor(X,X_pcs$x[,1:4]),is.corr=T)
+#corrplot(cor(X,X_pcs$x[,1:4]),is.corr=T)
 ```
 
 **IS NECESSARY TO DO THE SAME BY CLASS?**
@@ -669,8 +705,6 @@ draw.circle(0,0,1,border=color_4,lwd=1)
 ```
 
 
-figure \ref{fig:l2pcgr}...
-
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
 
@@ -700,10 +734,17 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 \newpage
 
-# Conclusions
+## Conclusions
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+
+## References
+
+1. Banegas JR, de la Cruz JJ, Rodríguez-Artalejo F, Graciani A, Guallar-Castillón P, Herruzo R. Systolic vs diastolic blood pressure: community burden and impact on blood pressure staging. J Hum Hypertens. 2002 Mar;16(3):163-7. doi: 10.1038/sj.jhh.1001310. PMID: 11896505.
+
+2. S. Kurl, J.A. Laukkanen, R. Rauramaa, T.A. Lakka, J. Sivenius, and J.T. Salonen. Systolic Blood Pressure Response to Exercise Stress Test and Risk of Stroke.  Sep 2001 https://doi.org/10.1161/hs0901.095395Stroke. 2001;32:2036–2041
