--- a/Step1_Project.Rmd
+++ b/Step1_Project.Rmd
@@ -46,9 +46,9 @@ Participants of the study were adults with, or at risk of, significant bleeding 
 
 We have adjusted the original data set to remove some variables that were not relevant to our investigation. We have removed variables regarding the exact surgical procedures administered to patients, various IDs, and details on the patient outcome. We removed the health outcome columns because of complications regarding missing data, where the boolean structure of the columns relating to specific outcomes, like stroke or pulmonary embolism, left a large number of cases with missing values. Instead, we added a boolean variable for a general outcome of survival to assess the efficacy of the procedure, rather than looking at particular health outcomes in post-surgery for living patients. 
 
-We will be using variables regarding the sex, age, and injury of the patient as well as certain biometrics, like blood pressure, respiratory and heart rates, details on surgical blood transfusion, and a boolean variable on the survival of the patient. Our selection provides us with a balance of continuous and categorical variables, many of which are boolean, with minimal complications due to missing data. In summary, the data set consist of $n = 9497$ observations, with 11 columns, which $p = 8$ are quantitative and 3 are qualitative.
+We will be using variables regarding the sex, age, and injury of the patient as well as certain biometrics, like blood pressure, respiratory and heart rates, details on surgical blood transfusion, and a boolean variable on the survival of the patient. Our selection provides us with a balance of continuous and categorical variables, many of which are boolean, with minimal complications due to missing data. In summary, the data set consists of $n = 9497$ observations, with 11 columns, which $p = 8$ are quantitative and 3 are qualitative.
 
-Moreover, the normal ranges of the biometric measurements are also added, in order to have a point of comparison with the observations present in the data sey and in this way determine if they are abnormal with respect to the normal metrics.
+Moreover, the normal ranges of the biometric measurements are also added, in order to have a point of comparison with the observations present in the data set and in this way determine if they are abnormal with respect to the normal metrics.
 
 \newpage
 
@@ -68,7 +68,7 @@ The variables in this dataset are the following:
 
 6. rr: (Numerical) Respiratory Rate (breaths per minute). Normal range for adults at rest: 12 - 20 breaths per minute.
 
-7. cc: (Numerical) Central Capillary Refille Time (seconds). Normal range for adults at rest. Less 3 seconds
+7. cc: (Numerical) Central Capillary Refill Time (seconds). Normal range for adults at rest. Less than 3 seconds.
 
 8. hr: (Numerical) Heart Rate (beats per minute). Normal range for adults at rest: 60 - 100 bpm.
 
@@ -112,6 +112,8 @@ summary(X[,-c(12:16)])
 
 Finally, the list of different values by column is the following:
 
+
+
 ```{r echo=FALSE}
 table <- apply(X[,-c(12:16)], 2, function(x) length(unique(x)))
 kable(t(table),
@@ -125,9 +127,9 @@ kable(t(table),
 
 ### Univariate Analysis
 
-First, we will review the distribution of the variables involve in the dataset
+First, we will review the distribution of the variables involved in the dataset.
 
-In the case of age, the figure \ref{fig:age} reflects how this variable appears to be largely weighted to the left, with lower ages featuring more frequently than those that are greater, possibly reflecting that younger people often take more risk and work higher at-risk occupations, raising their chance of experiencing trauma involving bleeding.
+In the case of age, the Figure \ref{fig:age} reflects how this variable appears to be largely weighted to the left, with lower ages featuring more frequently than those that are greater, possibly reflecting that younger people often take more risk and work higher at-risk occupations, raising their chance of experiencing trauma involving bleeding.
 
 ```{r age, fig.cap = "Distribution of age variable\\label{fig:age}", echo=FALSE}
 plothist(col_name = "age", df = X, ylabtext = "All participants",  color_1, density_plot = FALSE)
